--- a/index.html
+++ b/index.html
@@ -95,34 +95,34 @@ I have participated in prestigious AI related conferences such as the ICML 2019 
 <li>2020/08 - Glad to win a grant for the KDD 2020, ACM Conference on Knowledge Discovery and Data Mining.</li>
 <li>2020/07 - Invited by IEEE SPS UNI to give a workshop: "Deep Learning: Fundamentos y Aplicaciones".</li>
 <li>2020/07 - Invited by my faculty FIEE UNI to give a talk about my experience in research internships abroad.</li>
-<li>2020/06 - <a href="https://sites.google.com/view/hsys2020/papers/accepted-papers">My third paper was selected for poster presentation at HSYS workshop at the ICML 2020</a>.</li>
-<li>2020/06 - <a href="https://mlforglobalhealth.org/posters-and-spotlights/">My two papers were accepted for oral & poster presentation at ML4GH workshop at the ICML 2020</a>.</li>
+<li>2020/06 - <a href="https://sites.google.com/view/hsys2020/papers/accepted-papers" target="_blank">My third paper was selected for poster presentation at HSYS workshop at the ICML 2020</a>.</li>
+<li>2020/06 - <a href="https://mlforglobalhealth.org/posters-and-spotlights/" target="_blank">My two papers were accepted for oral & poster presentation at ML4GH workshop at the ICML 2020</a>.</li>
 <li>2020/06 - Thankful for winning a LXAI grant for my participation in the prestigious ICML 2020.</li>
 <li>2020/06 - Grateful for winning a grant for the ACL 2020, the best conference on Natural Language Processing.</li>
-<li>2020/06 - <a href="https://sites.google.com/view/inclusion-2020/inclusion-fellowsbio#h.kvia409tw9k8">Selected as an Inclusion Fellow for the Science and Systems (RSS) 2020 conference</a>.</li>
+<li>2020/06 - <a href="https://sites.google.com/view/inclusion-2020/inclusion-fellowsbio#h.kvia409tw9k8" target="_blank">Selected as an Inclusion Fellow for the Science and Systems (RSS) 2020 conference</a>.</li>
 <li>2020/06 - Glad to obtain a grant for the Robotics: Science and Systems (RSS) 2020 conference.</li>
-<li>2020/05 - <a href="https://www.latinxinai.org/icml-2020#workshop-org">Selected as program committee member (reviewer) for the LXAI Workshop at the ICML 2020</a>.</li>
-<li>2020/05 - <a href="http://lxmls.it.pt/2020/">Selected to participate in the Lisbon Machine Learning School (LxMLS 2020)</a>.</li>
+<li>2020/05 - <a href="https://www.latinxinai.org/icml-2020#workshop-org" target="_blank">Selected as program committee member (reviewer) for the LXAI Workshop at the ICML 2020</a>.</li>
+<li>2020/05 - <a href="http://lxmls.it.pt/2020/" target="_blank">Selected to participate in the Lisbon Machine Learning School (LxMLS 2020)</a>.</li>
 <li>2020/03 - Included as a program committee member (reviewer) for the IEEE INTERCON 2020.</li>
 <li>2020/03 - Selected to participate in the CMMRS 2020: Cornell, Maryland, Max Planck Pre-doctoral School.</li>
 <li>2020/03 - Glad to obtain a grant for the School of AI programme 2020, hosted by Pi School.</li>
-<li>2020/01 - <a href="http://ailatinsum.mit.edu/">Selected as a winner of the AI Latin America SumMIT, event held at the MIT Media Lab</a>.</li>
+<li>2020/01 - <a href="http://ailatinsum.mit.edu/" target="_blank">Selected as a winner of the AI Latin America SumMIT, event held at the MIT Media Lab</a>.</li>
 <li>2019/11 - Selected by Fondecyt Peru for a research stay at the University of Padua, Italy.</li>
 <li>2019/11 - Glad to give a talk 'AI in Healtcare' at the faculty of Pharmacy and Biochemistry, at the UNMSM.</li>
 <li>2019/10 - Winner of the LXAI travel grant to participate in the prestigious NeurIPS 2019.</li>
-<li>2019/10 - <a href="https://www.latinxinai.org/neurips-2019-presenters">My 3 submitted abstracts were accepted for the LXAI Workshop at the NeurIPS 2019</a>.</li>
+<li>2019/10 - <a href="https://www.latinxinai.org/neurips-2019-presenters" target="_blank">My 3 submitted abstracts were accepted for the LXAI Workshop at the NeurIPS 2019</a>.</li>
 <li>2019/10 - Our paper, in collaboration with the IIFIEE-UNI, was accepted for the BTSym'19.</li>
-<li>2019/09 - <a href="https://www.latinxinai.org/neurips-2019#nips-org">Selected as a program committee member (reviewer) for the LXAI Workshop at the NeurIPS 2019</a>.</li>
+<li>2019/09 - <a href="https://www.latinxinai.org/neurips-2019#nips-org" target="_blank">Selected as a program committee member (reviewer) for the LXAI Workshop at the NeurIPS 2019</a>.</li>
 <li>2019/09 - Invited to give a talk at the 22vo Meetup 2019, organized by Data Science Research Perú.</li>
 <li>2019/09 - Glad to give a talk about a UPCH project at the event: 'Innova como ellos', org. by Innóvate Perú.</li>
-<li>2019/06 - <a href="https://ieeexplore.ieee.org/xpl/conhome/8846111/proceeding">My 2 submitted papers were accepted for the IEEE INTERCON 2019 conference</a>.</li>
-<li>2019/06 - <a href="https://simbig.org/SIMBig2019/en/program.html">My 2 submitted papers were accepted for the SIMBig 2019 conference</a>.</li>
+<li>2019/06 - <a href="https://ieeexplore.ieee.org/xpl/conhome/8846111/proceeding" target="_blank">My 2 submitted papers were accepted for the IEEE INTERCON 2019 conference</a>.</li>
+<li>2019/06 - <a href="https://simbig.org/SIMBig2019/en/program.html" target="_blank">My 2 submitted papers were accepted for the SIMBig 2019 conference</a>.</li>
 <li>2019/05 - Glad to give a talk at the Computer Science Colloquium, event chaired by PhD. Modesto Montoya.</li>
 <li>2019/05 - Selected as winner of a ICML travel grant to participate in this prestigious conference.</li>
-<li>2019/04 - <a href="https://www.latinxinai.org/icml-2019-presenters">Thrilled that my submitted abstract was accepted for the LXAI Workshop at the ICML 2019</a>.</li>
-<li>2018/06 - <a href="https://ieeexplore.ieee.org/xpl/conhome/8484861/proceeding">My submitted paper was accepted for the IEEE INTERCON 2018 conference</a>.</li>
-<li>2017/08 - <a href="https://dblp.org/db/conf/ciarp/ciarp2017.html">My work, advised by PhD. Bogdan Kwolek (AGH UST), was accepted for the CIARP 2017</a>.</li>
-<li>2016/11 - <a href="http://www.unesco.agh.edu.pl/fileadmin/default/templates/css/j/unesco/system/program_UCTE_2016_v12_2016_12_06x.pdf">Selected as paper presenter and session chair for the UNESCO UCTE 2016 conference, Poland</a>.</li>
+<li>2019/04 - <a href="https://www.latinxinai.org/icml-2019-presenters" target="_blank">Thrilled that my submitted abstract was accepted for the LXAI Workshop at the ICML 2019</a>.</li>
+<li>2018/06 - <a href="https://ieeexplore.ieee.org/xpl/conhome/8484861/proceeding" target="_blank">My submitted paper was accepted for the IEEE INTERCON 2018 conference</a>.</li>
+<li>2017/08 - <a href="https://dblp.org/db/conf/ciarp/ciarp2017.html" target="_blank">My work, advised by PhD. Bogdan Kwolek (AGH UST), was accepted for the CIARP 2017</a>.</li>
+<li>2016/11 - <a href="http://www.unesco.agh.edu.pl/fileadmin/default/templates/css/j/unesco/system/program_UCTE_2016_v12_2016_12_06x.pdf" target="_blank">Selected as paper presenter and session chair for the UNESCO UCTE 2016 conference, Poland</a>.</li>
 <li>2016/06 - Selected for a fellowship under the UNESCO/Poland Program at the AGH UST, Poland.</li>
 <li>2015/07 - Graduated with the 1st place in my graduating class at Universidad Nacional de Ingeniería - UNI.</li>
 </ul>
@@ -151,7 +151,7 @@ I have participated in prestigious AI related conferences such as the ICML 2019 
 
 </body></html> -->
 Made from scratch - Python as backend <br/>
-Website updated 06-09-2020 07:26 GMT <br/> 
+Website updated 06-09-2020 07:27 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
