--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ I have participated in prestigious AI related conferences such as the ICML 2019 
 <li>2020/05 - <a href="https://www.latinxinai.org/icml-2020#workshop-org" target="_blank">Selected as program committee member (reviewer) for the LXAI Workshop at the ICML 2020</a>.</li>
 <li>2020/05 - <a href="http://lxmls.it.pt/2020/" target="_blank">Selected to participate in the Lisbon Machine Learning School (LxMLS 2020)</a>.</li>
 <li>2020/03 - Included as a program committee member (reviewer) for the IEEE INTERCON 2020.</li>
-<li>2020/03 - Selected to participate in the CMMRS 2020: Cornell, Maryland, Max Planck Pre-doctoral School.</li>
+<li>2020/03 - <a href="https://cmmrs.mpi-sws.org/" target="_blank">Selected to participate in the CMMRS 2020: Cornell, Maryland, Max Planck Pre-doctoral School</a>.</li>
 <li>2020/03 - Glad to obtain a grant for the School of AI programme 2020, hosted by Pi School.</li>
 <li>2020/01 - <a href="http://ailatinsum.mit.edu/" target="_blank">Selected as a winner of the AI Latin America SumMIT, event held at the MIT Media Lab</a>.</li>
 <li>2019/11 - Selected by Fondecyt Peru for a research stay at the University of Padua, Italy.</li>
@@ -151,7 +151,7 @@ I have participated in prestigious AI related conferences such as the ICML 2019 
 
 </body></html> -->
 Made from scratch - Python as backend <br/>
-Website updated 06-09-2020 07:33 GMT <br/> 
+Website updated 06-09-2020 07:44 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
