--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ I have participated in prestigious AI related conferences such as the ICML 2019 
 <li>2018/06 - <a href="https://ieeexplore.ieee.org/xpl/conhome/8484861/proceeding" target="_blank">My submitted paper was accepted for the IEEE INTERCON 2018 conference</a>.</li>
 <li>2017/08 - <a href="https://dblp.org/db/conf/ciarp/ciarp2017.html" target="_blank">My work, advised by PhD. Bogdan Kwolek (AGH UST), was accepted for the CIARP 2017</a>.</li>
 <li>2016/11 - <a href="http://www.unesco.agh.edu.pl/fileadmin/default/templates/css/j/unesco/system/program_UCTE_2016_v12_2016_12_06x.pdf" target="_blank">Selected as paper presenter and session chair for the UNESCO UCTE 2016 conference, Poland</a>.</li>
-<li>2016/06 - Selected for a fellowship under the UNESCO/Poland Program at the AGH UST, Poland.</li>
+<li>2016/06 - <a href="http://www.unesco.agh.edu.pl/en/" target="_blank">Selected for a fellowship under the UNESCO/Poland Program at the AGH UST, Poland</a>.</li>
 <li>2015/07 - <a href="https://www.uni.edu.pe/" target="_blank">Graduated with the 1st place in my graduating class at Universidad Nacional de Ingeniería - UNI</a>.</li>
 </ul>
 </p>
@@ -151,7 +151,7 @@ I have participated in prestigious AI related conferences such as the ICML 2019 
 
 </body></html> -->
 Made from scratch - Python as backend <br/>
-Website updated 06-09-2020 07:46 GMT <br/> 
+Website updated 06-09-2020 07:48 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
