--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ I have participated in prestigious AI related conferences such as the ICML 2019 
 <li>2019/11 - Glad to give a talk 'AI in Healtcare' at the faculty of Pharmacy and Biochemistry, at the UNMSM.</li>
 <li>2019/10 - Winner of the LXAI travel grant to participate in the prestigious NeurIPS 2019.</li>
 <li>2019/10 - <a href="https://www.latinxinai.org/neurips-2019-presenters" target="_blank">My 3 submitted abstracts were accepted for the LXAI Workshop at the NeurIPS 2019</a>.</li>
-<li>2019/10 - Our paper, in collaboration with the IIFIEE-UNI, was accepted for the BTSym'19.</li>
+<li>2019/10 - <a href="https://www.springer.com/gp/book/9783030575656" target="_blank">Our paper, in collaboration with the IIFIEE-UNI, was accepted for the BTSym'19</a>.</li>
 <li>2019/09 - <a href="https://www.latinxinai.org/neurips-2019#nips-org" target="_blank">Selected as a program committee member (reviewer) for the LXAI Workshop at the NeurIPS 2019</a>.</li>
 <li>2019/09 - Invited to give a talk at the 22vo Meetup 2019, organized by Data Science Research Perú.</li>
 <li>2019/09 - Glad to give a talk about a UPCH project at the event: 'Innova como ellos', org. by Innóvate Perú.</li>
@@ -151,7 +151,7 @@ I have participated in prestigious AI related conferences such as the ICML 2019 
 
 </body></html> -->
 Made from scratch - Python as backend <br/>
-Website updated 06-09-2020 07:48 GMT <br/> 
+Website updated 06-09-2020 07:53 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
