--- a/index.html
+++ b/index.html
@@ -87,6 +87,35 @@ I have participated in prestigious AI related conferences such as the ICML 2019 
 </p>
 
 
+<style>
+{
+    box-sizing: border-box;
+}
+/* Set additional styling options for the columns */
+.column {
+float: left;
+}
+
+/* Set width length for the left, right and middle columns */
+.left {
+width: 20%;
+}
+
+.middle {
+width: 30%;
+}
+
+.right {
+width: 50%;
+}
+
+.row:after {
+content: "";
+display: table;
+clear: both;
+}
+</style>
+
 <div class="row">
     <div class="column left" style="background-color:#FFB695;">
         <h2>Column 1</h2>
@@ -168,7 +197,7 @@ I have participated in prestigious AI related conferences such as the ICML 2019 
 
 </body></html> -->
 Made from scratch - Python as backend <br/>
-Website updated 09-09-2020 13:58 GMT <br/> 
+Website updated 09-09-2020 13:59 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
