--- a/index.html
+++ b/index.html
@@ -116,6 +116,9 @@ clear: both;
 }
 </style>
 
+
+<h2>Research interests</h2>
+
 <div class="row">
     <div class="column left">
         <h2>Column 1</h2>
@@ -199,7 +202,7 @@ clear: both;
 
 </body></html> -->
 Made from scratch - Python as backend <br/>
-Website updated 09-09-2020 14:09 GMT <br/> 
+Website updated 09-09-2020 14:10 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
