--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@ clear: both;
         <p>
         <ul>
         <li>Artificial Intelligence.</li>
+        <li>Machine Learning.</li>
         </ul>
         </p>
     </div>
