--- a/index.html
+++ b/index.html
@@ -129,10 +129,18 @@ clear: both;
         </p>
     </div>
     <div class="column middle">
-        <p>Data..</p>
+        <ul>
+        <li>Artificial Intelligence.</li>
+        <li>Machine Learning.</li>
+        </ul>
+        </p>
     </div>
     <div class="column right">
-        <p>Data..</p>
+        <ul>
+        <li>Artificial Intelligence.</li>
+        <li>Machine Learning.</li>
+        </ul>
+        </p>
     </div>
 </div>
 
@@ -202,7 +210,7 @@ clear: both;
 
 </body></html> -->
 Made from scratch - Python as backend <br/>
-Website updated 09-09-2020 14:12 GMT <br/> 
+Website updated 09-09-2020 14:13 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
