--- a/index.html
+++ b/index.html
@@ -130,15 +130,15 @@ clear: both;
     </div>
     <div class="column middle">
         <ul>
-        <li>Artificial Intelligence.</li>
-        <li>Machine Learning.</li>
+        <li>Computer Vision.</li>
+        <li>Signal Processing and Control.</li>
         </ul>
         </p>
     </div>
     <div class="column right">
         <ul>
-        <li>Artificial Intelligence.</li>
-        <li>Machine Learning.</li>
+        <li>Natural Language Processing.</li>
+        <li>Real-Time Systems.</li>
         </ul>
         </p>
     </div>
@@ -210,7 +210,7 @@ clear: both;
 
 </body></html> -->
 Made from scratch - Python as backend <br/>
-Website updated 09-09-2020 14:13 GMT <br/> 
+Website updated 09-09-2020 14:14 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
