--- a/index.html
+++ b/index.html
@@ -143,12 +143,12 @@ clear: both;
     </div>
 </div>
 
-<h2>Research interests</h2>
+<h2>Find me</h2>
 <div class="row">
     <div class="column left">
         <p>
         <ul>
-        <li>Artificial Intelligence.</li>
+        <li><a target="_blank" href="https://scholar.google.com/citations?user=QQTBnmMAAAAJ&hl=en">Google Scholar</a></li>
         <li>Machine Learning.</li>
         </ul>
         </p>
@@ -237,7 +237,7 @@ clear: both;
 
 </body></html> -->
 Made from scratch - Python as backend <br/>
-Website updated 09-09-2020 14:16 GMT <br/> 
+Website updated 09-09-2020 14:17 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
