--- a/index.html
+++ b/index.html
@@ -76,36 +76,7 @@ I have participated in prestigious AI related conferences such as the ICML 2019 
 </p>
 <br/>
 
-<style>
-{
-    box-sizing: border-box;
-}
-/* Set additional styling options for the columns */
-.column {
-float: left;
-}
-
-/* Set width length for the left, right and middle columns */
-.left {
-width: 33.3%;
-}
-
-.middle {
-width: 33.3%;
-}
-
-.right {
-width: 33.3%;
-}
-
-.row:after {
-content: "";
-display: table;
-clear: both;
-}
-</style>
-
-<h2>Research interests</h2>
+<h2>Research interestsX</h2>
 <div class="row">
     <div class="column left">
         <p>
@@ -232,7 +203,7 @@ clear: both;
 
 </body></html> -->
 Made from scratch - Python as backend <br/>
-Website updated 09-09-2020 14:38 GMT <br/> 
+Website updated 09-09-2020 14:41 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
