--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ I have participated in prestigious AI related conferences such as the ICML 2019 
 </p>
 <br/>
 
-<h2>Research interestsX</h2>
+<h2>Research interests</h2>
 <div class="row">
     <div class="column left">
         <p>
@@ -203,7 +203,7 @@ I have participated in prestigious AI related conferences such as the ICML 2019 
 
 </body></html> -->
 Made from scratch - Python as backend <br/>
-Website updated 09-09-2020 14:41 GMT <br/> 
+Website updated 09-09-2020 14:44 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
