--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ I have participated in prestigious AI related conferences such as the ICML 2019 
 <br/>
 <h2>Research interests</h2>
 <div class="row">
-    <div class="column left">
+    <div class="column">
         <p>
         <ul>
         <li>Artificial Intelligence.</li>
@@ -85,19 +85,11 @@ I have participated in prestigious AI related conferences such as the ICML 2019 
         </ul>
         </p>
     </div>
-    <div class="column middle">
+    <div class="column">
     	<p>
         <ul>
         <li>Computer Vision.</li>
         <li>Natural Language Processing.</li>
-        </ul>
-        </p>
-    </div>
-    <div class="column right">
-    	<p>
-        <ul>
-        <li>Signal Processing and Control.</li>
-        <li>Real-Time Systems.</li>
         </ul>
         </p>
     </div>
@@ -199,7 +191,7 @@ I have participated in prestigious AI related conferences such as the ICML 2019 
 
 </body></html> -->
 Made from scratch - Python as backend <br/>
-Website updated 09-09-2020 14:59 GMT <br/> 
+Website updated 10-09-2020 06:08 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
