--- a/index.html
+++ b/index.html
@@ -97,30 +97,23 @@ I have participated in prestigious AI related conferences such as the ICML 2019 
 <br/>
 <h2>Find me</h2>
 <div class="row">
-    <div class="column left">
+    <div class="column">
         <p>
         <ul>
         <li>[<a target="_blank" href="https://scholar.google.com/citations?user=QQTBnmMAAAAJ&hl=en">Google Scholar</a>]</li>
         <li>[<a target="_blank" href="https://www.scopus.com/authid/detail.uri?authorId=57200698818">Scopus</a>]</li>
         <li>[<a target="_blank" href="https://orcid.org/0000-0001-5574-6967">ORCID</a>]</li>
+        <li>[<a target="_blank" href="https://www.linkedin.com/in/dennishnf">LinkedIn</a>]</li>
         </ul>
         </p>
     </div>
-    <div class="column middle">
+    <div class="column">
     	<p>
         <ul>
         <li>[<a target="_blank" href="https://www.researchgate.net/profile/Dennis_Nunez_Fernandez">ResearchGate</a>]</li>
         <li>[<a target="_blank" href="https://www.semanticscholar.org/author/Dennis-N%C3%BA%C3%B1ez-Fern%C3%A1ndez/35318979">Semantic Scholar</a>]</li>
         <li>[<a target="_blank" href="https://www.github.com/dennishnf">GitHub</a>]</li>
-        </ul>
-        </p>
-    </div>
-    <div class="column right">
-    	<p>
-        <ul>
-        <li>[<a target="_blank" href="https://www.linkedin.com/in/dennishnf">LinkedIn</a>]</li>
         <li>[<a target="_blank" href="https://twitter.com/dennishnf">Twitter</a>]</li>
-        <li>[<a target="_blank" href="https://www.youtube.com/channel/UC-js4NaIhqI7NtVWT2JGHrQ/videos?view_as=subscriber">YouTube</a>]</li>
         </ul>
         </p>
     </div>
@@ -191,7 +184,7 @@ I have participated in prestigious AI related conferences such as the ICML 2019 
 
 </body></html> -->
 Made from scratch - Python as backend <br/>
-Website updated 10-09-2020 06:11 GMT <br/> 
+Website updated 10-09-2020 06:13 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
