--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ I have participated in prestigious AI related conferences such as the ICML 2019 
     <div class="column right">
     	<p>
         <ul>
-        <li>Signal Processing and Control.</li>
+        <li>Signal Processing.</li>
         <li>Real-Time Systems.</li>
         </ul>
         </p>
@@ -199,7 +199,7 @@ I have participated in prestigious AI related conferences such as the ICML 2019 
 
 </body></html> -->
 Made from scratch - Python as backend <br/>
-Website updated 10-09-2020 08:32 GMT <br/> 
+Website updated 10-09-2020 08:33 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
