--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 Currently, I'm a research assistant at the <a target="_blank" href="https://facien.cayetano.edu.pe/investigacion-lid/lista-de-laboratorios-de-investigacion-y-desarrollo/73-bioinformatica">Bioinformatics and Molecular Biology Laboratory</a> at <a target="_blank" href="https://en.wikipedia.org/wiki/Cayetano_Heredia_University">Universidad Peruana Cayetano Heredia (UPCH)</a>, Peru. There, I develop Artificial Intelligence algorithms for early and low-cost medical diagnosis. I obtained my bachelor degree in Science with a mention in Electronic Engineering from the <a target="_blank" href="https://en.wikipedia.org/wiki/National_University_of_Engineering">Universidad Nacional de Ingeniería (UNI)</a>, Peru, and ranked first in my graduating class. My research experience includes two research fellowships in Artificial Intelligence & Deep Learning at the <a target="_blank" href="yyyy">AGH University of Science and Technology</a> (Poland) and the <a target="_blank" href="yyyy">University of Padova</a> (Italy).
 <br/>
 <br/>
-I have participated in prestigious AI related conferences such as the <a target="_blank" href="yyyy">ICML 2019</a> (USA), the <a target="_blank" href="yyyy">NeurIPS 2019</a> (Canada), the <a target="_blank" href="yyyy">ICML 2020</a> (Austria), the <a target="_blank" href="yyyy">ACL 2020</a> (USA) and the <a target="_blank" href="yyyy">RSS 2020</a> (USA). Also, I have participated in important schools such as the <a target="_blank" href="yyyy">xxx</a>10th Lisbon Machine Learning School - LxMLS 2020 (Portugal) and the <a target="_blank" href="yyyy">Cornell, Maryland, Max Planck Pre-doctoral Research School - CMMRS 2020</a> (Germany). My academic service experience includes participation as a committee member in the role of reviewer for the <a target="_blank" href="yyyy">LXAI Workshop at NeurIPS 2019</a> and the <a target="_blank" href="yyyy">LXAI Workshop at ICML 2020</a>. In addition to my interest and work in Artificial Intelligence, I have a special interest in books related to science fiction & technology, and attraction for topics about the impact and future of science and technology.
+I have participated in prestigious AI related conferences such as the <a target="_blank" href="yyyy">ICML 2019</a> (USA), the <a target="_blank" href="yyyy">NeurIPS 2019</a> (Canada), the <a target="_blank" href="yyyy">ICML 2020</a> (Austria), the <a target="_blank" href="yyyy">ACL 2020</a> (USA) and the <a target="_blank" href="yyyy">RSS 2020</a> (USA). Also, I have participated in important schools such as the <a target="_blank" href="yyyy">10th Lisbon Machine Learning School - LxMLS 2020</a> (Portugal) and the <a target="_blank" href="yyyy">Cornell, Maryland, Max Planck Pre-doctoral Research School - CMMRS 2020</a> (Germany). My academic service experience includes participation as a committee member in the role of reviewer for the <a target="_blank" href="yyyy">LXAI Workshop at NeurIPS 2019</a> and the <a target="_blank" href="yyyy">LXAI Workshop at ICML 2020</a>. In addition to my interest and work in Artificial Intelligence, I have a special interest in books related to science fiction & technology, and attraction for topics about the impact and future of science and technology.
 </p>
 </p>
 <br/>
@@ -199,7 +199,7 @@ I have participated in prestigious AI related conferences such as the <a target=
 
 </body></html> -->
 Made from scratch - Python as backend <br/>
-Website updated 10-09-2020 08:41 GMT <br/> 
+Website updated 10-09-2020 08:42 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
