--- a/research/research.html
+++ b/research/research.html
@@ -66,7 +66,7 @@
 <br/>
 <ul>
 <li>
-<i>Pre-printed paper:</i> D. Núñez-Fernández, F. Barrientos-Porras, R. H. Gilman, M. Vittet-Mondonedo, P. Sheen, M. Zimic. `A Convolutional Neural Network for gaze preference detection: A potential tool for diagnostics of autism spectrum disorder in children'. arXiv preprint arXiv:2007.14432. (2020) <br/>
+<i>Pre-printed journal paper:</i> D. Núñez-Fernández, F. Barrientos-Porras, R. H. Gilman, M. Vittet-Mondonedo, P. Sheen, M. Zimic. `A Convolutional Neural Network for gaze preference detection: A potential tool for diagnostics of autism spectrum disorder in children'. arXiv preprint arXiv:2007.14432. (2020) <br/>
 [<a href="https://arxiv.org/abs/2007.14432">PDF</a>] 
 [<a href="https://arxiv.org/abs/2007.14432">arXiv</a>] 
 </li>
@@ -185,7 +185,7 @@
 
 </body></html> -->
 Made from scratch - Python as backend <br/>
-Website updated 10-09-2020 09:32 GMT <br/> 
+Website updated 10-09-2020 09:34 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
