--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ I have participated in prestigious AI related conferences such as the <a target=
 <h2>News</h2>
 <p>
 <ul>
-<li>2020/09 - Invited to give a talk for "GAIA - UNI Advanced Research Group on Artificial Intelligence".</li>
+<li>2020/09 - Invited to give a talk for the Advanced Research Group on Artificial Intelligence (GAIA - UNI).</li>
 <li>2020/09 - Glad to give a talk at the "Semana de la Innovación", event organized by Fondecyt Peru.</li>
 <li>2020/09 - <a href="https://micromasters.mit.edu/ds/" target="_blank">Cheerful to start the MITx MicroMasters in Statistics and Data Science, funded by Aporta</a>.
 <li>2020/08 - Winner of a scholarship for the Advanced Program in Data Science & Global Skills, hosted by MIT.</li>
@@ -201,7 +201,7 @@ I have participated in prestigious AI related conferences such as the <a target=
 
 </body></html> -->
 Made from scratch - Python as backend <br/>
-Website updated 22-09-2020 02:11 GMT <br/> 
+Website updated 22-09-2020 02:14 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
