--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@ I have participated in prestigious AI related conferences such as the <a target=
 <h2>News</h2>
 <p>
 <ul>
+<li>2020/10 - <a href="https://www.latinxinai.org/neurips-2020#nips-org" target="_blank">Selected as a program committee member (reviewer) for the LXAI Workshop at the NeurIPS 2020</a>.</li>
 <li>2020/09 - Invited to give a talk for the UNI Advanced Research Group on Artificial Intelligence - GAIA.</li>
 <li>2020/09 - Glad to give a talk at the "Semana de la Innovación", event organized by Fondecyt Peru.</li>
 <li>2020/09 - <a href="https://micromasters.mit.edu/ds/" target="_blank">Cheerful to start the MITx MicroMasters in Statistics and Data Science, funded by Aporta</a>.
@@ -201,7 +202,7 @@ I have participated in prestigious AI related conferences such as the <a target=
 
 </body></html> -->
 Made from scratch - Python as backend <br/>
-Website updated 10-10-2020 03:15 GMT <br/> 
+Website updated 10-10-2020 03:17 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
