--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ I have participated in prestigious AI related conferences such as the <a target=
 <h2>News</h2>
 <p>
 <ul>
-<li>2020/10 - Grateful to have been invited to give a talk for Inspiring UNI, as part of a series of talks.</li>
+<li>2020/10 - Grateful to have been invited to give a talk for Inspiring UNI, as part of a series of professional talks.</li>
 <li>2020/10 - <a href="https://www.latinxinai.org/neurips-2020#nips-org" target="_blank">Selected as a program committee member (reviewer) for the LXAI Workshop at the NeurIPS 2020</a>.</li>
 <li>2020/09 - Invited to give a talk for the UNI Advanced Research Group on Artificial Intelligence - GAIA.</li>
 <li>2020/09 - Glad to give a talk at the "Semana de la Innovación", event organized by Fondecyt Peru.</li>
@@ -203,7 +203,7 @@ I have participated in prestigious AI related conferences such as the <a target=
 
 </body></html> -->
 Made from scratch - Python as backend <br/>
-Website updated 29-10-2020 17:58 GMT <br/> 
+Website updated 29-10-2020 18:00 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
