--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@ I have participated in prestigious AI related conferences such as the <a target=
 <li>2020/06 - Thankful for winning a LXAI grant for my participation in the prestigious ICML 2020.</li>
 <li>2020/06 - <a href="https://acl2020.org/" target="_blank">Grateful for winning a grant for the ACL 2020, the best conference on Natural Language Processing</a>.</li>
 <li>2020/06 - <a href="https://sites.google.com/view/inclusion-2020/inclusion-fellowsbio#h.kvia409tw9k8" target="_blank">Selected as an Inclusion Fellow for the Science and Systems (RSS) 2020 conference</a>.</li>
+<li>2020/06 - Grateful to have been accepted as a mentee in the LXAI Mentoring Program at ICML 2020.</li>
 <li>2020/06 - Glad to obtain a grant for the Robotics: Science and Systems (RSS) 2020 conference.</li>
 <li>2020/05 - <a href="https://www.latinxinai.org/icml-2020#workshop-org" target="_blank">Selected as program committee member (reviewer) for the LXAI Workshop at the ICML 2020</a>.</li>
 <li>2020/05 - <a href="http://lxmls.it.pt/2020/" target="_blank">Selected to participate in the Lisbon Machine Learning School (LxMLS 2020)</a>.</li>
@@ -203,7 +204,7 @@ I have participated in prestigious AI related conferences such as the <a target=
 
 </body></html> -->
 Made from scratch - Python as backend <br/>
-Website updated 21-11-2020 10:20 GMT <br/> 
+Website updated 21-11-2020 10:38 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
