--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ I have participated in prestigious AI related conferences such as the <a target=
 <h2>News</h2>
 <p>
 <ul>
-<li>2020/06 - Grateful to have been accepted as a mentee in the LXAI Mentoring Program at NeurIPS 2020.</li>
+<li>2020/06 - Glad to have been accepted as a mentee in the LXAI Mentoring Program at NeurIPS 2020.</li>
 <li>2020/10 - Grateful to be invited to give a talk for Inspiring UNI, as part of a series of professional talks.</li>
 <li>2020/10 - <a href="https://www.latinxinai.org/neurips-2020#nips-org" target="_blank">Selected as a program committee member (reviewer) for the LXAI Workshop at the NeurIPS 2020</a>.</li>
 <li>2020/09 - Invited to give a talk for the UNI Advanced Research Group on Artificial Intelligence - GAIA.</li>
@@ -171,7 +171,7 @@ I have participated in prestigious AI related conferences such as the <a target=
 <li>2019/06 - <a href="https://ieeexplore.ieee.org/xpl/conhome/8846111/proceeding" target="_blank">My 2 submitted papers were accepted for the IEEE INTERCON 2019 conference</a>.</li>
 <li>2019/06 - <a href="https://simbig.org/SIMBig2019/en/program.html" target="_blank">My 2 submitted papers were accepted for the SIMBig 2019 conference</a>.</li>
 <li>2019/05 - Glad to give a talk at the Computer Science Colloquium, event chaired by PhD. Modesto Montoya.</li>
-<li>2019/05 - Glad to give a talk about a UPCH project at the event: 'Innova como ellos', org. by Innóvate Perú.</li>
+<li>2019/05 - Grateful to give a talk about a UPCH project at the event: 'Innova como ellos', org. by Innóvate Perú.</li>
 <li>2019/05 - Selected as winner of a ICML travel grant to participate in this prestigious conference.</li>
 <li>2019/04 - <a href="https://www.latinxinai.org/icml-2019-presenters" target="_blank">Thrilled that my submitted abstract was accepted for the LXAI Workshop at the ICML 2019</a>.</li>
 <li>2018/06 - <a href="https://ieeexplore.ieee.org/xpl/conhome/8484861/proceeding" target="_blank">My submitted paper was accepted for the IEEE INTERCON 2018 conference</a>.</li>
@@ -205,7 +205,7 @@ I have participated in prestigious AI related conferences such as the <a target=
 
 </body></html> -->
 Made from scratch - Python as backend <br/>
-Website updated 21-11-2020 10:42 GMT <br/> 
+Website updated 21-11-2020 10:43 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
