--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ I have participated in prestigious AI related conferences such as the <a target=
 <li>2020/09 - <a href="https://micromasters.mit.edu/ds/" target="_blank">Cheerful to start the MITx MicroMasters in Statistics and Data Science, funded by Aporta</a>.
 <li>2020/08 - Winner of a scholarship for the Advanced Program in Data Science & Global Skills, hosted by MIT.</li>
 <li>2020/08 - Included as a program committee member (reviewer) for the IEEE EIRCON 2020.</li>
-<li>2020/08 - Glad to win a grant for the KDD 2020, ACM Conference on Knowledge Discovery and Data Mining.</li>
+<li>2020/08 - <a href="https://www.kdd.org/kdd2020/" target="_blank">Glad to win a grant for the KDD 2020, ACM Conference on Knowledge Discovery and Data Mining</a>.
 <li>2020/07 - Invited by IEEE SPS UNI to give a workshop: "Deep Learning: Fundamentos y Aplicaciones".</li>
 <li>2020/07 - Invited by my faculty FIEE UNI to give a talk about my experience in research internships abroad.</li>
 <li>2020/06 - <a href="https://sites.google.com/view/hsys2020/papers/accepted-papers" target="_blank">My third paper was selected for poster presentation at HSYS workshop at the ICML 2020</a>.</li>
@@ -205,7 +205,7 @@ I have participated in prestigious AI related conferences such as the <a target=
 
 </body></html> -->
 Made from scratch - Python as backend <br/>
-Website updated 21-11-2020 11:06 GMT <br/> 
+Website updated 21-11-2020 11:14 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
