--- a/index.html
+++ b/index.html
@@ -204,8 +204,8 @@ I have participated in prestigious AI related conferences such as the <a target=
 </div>
 
 </body></html> -->
-Made from scratch - Python as backend <br/>
-Website updated 21-11-2020 11:46 GMT <br/> 
+<a href="https://dennishnf.com/README.html" target="_blank">Made from scratch - Python as backend</a> <br/>
+Website updated 21-11-2020 11:52 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
