--- a/cv/cv.html
+++ b/cv/cv.html
@@ -97,9 +97,9 @@
 </div>
 
 </body></html> -->
-Website updated 21-11-2020 11:57 GMT <br/> 
-</div> 
 <a href="https://dennishnf.com/README.html" target="_blank">Made from scratch - Python as backend</a> <br/>
+Website updated 21-11-2020 11:58 GMT <br/> 
+</div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
 </div> 
@@ -107,6 +107,7 @@ Website updated 21-11-2020 11:57 GMT <br/>
 </div> 
 </div> 
 </div> 
+<a href="https://dennishnf.com/README.html" target="_blank">Made from scratch - Python as backend</a> <br/>
 </body> 
 
 
