--- a/index.html
+++ b/index.html
@@ -204,9 +204,9 @@ I have participated in prestigious AI related conferences such as the <a target=
 </div>
 
 </body></html> -->
-Website updated 21-11-2020 11:57 GMT <br/> 
-</div> 
 <a href="https://dennishnf.com/README.html" target="_blank">Made from scratch - Python as backend</a> <br/>
+Website updated 21-11-2020 11:58 GMT <br/> 
+</div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
 </div> 
@@ -214,6 +214,7 @@ Website updated 21-11-2020 11:57 GMT <br/>
 </div> 
 </div> 
 </div> 
+<a href="https://dennishnf.com/README.html" target="_blank">Made from scratch - Python as backend</a> <br/>
 </body> 
 
 
