--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ I have participated in prestigious AI related conferences such as the <a target=
 <h2>News</h2>
 <p>
 <ul>
-<li>2020/12 - Grateful for winning an LXAI grant to attend the prestigious ICML 2020.</li>
+<li>2020/12 - Grateful for winning an LXAI grant to attend the prestigious NeurIPS 2020.</li>
 <li>2020/11 - <a href="https://www.latinxinai.org/neurips-2020" target="_blank">Grateful to have been accepted as a mentee in the LXAI Mentoring Program at NeurIPS 2020</a>.</li>
 <li>2020/10 - Glad to be invited to give a talk for Inspiring UNI, as part of a series of professional talks.</li>
 <li>2020/10 - <a href="https://www.latinxinai.org/neurips-2020#nips-org" target="_blank">Selected as a program committee member (reviewer) for the LXAI Workshop at the NeurIPS 2020</a>.</li>
@@ -206,7 +206,7 @@ I have participated in prestigious AI related conferences such as the <a target=
 
 </body></html> -->
 <a href="https://dennishnf.com/README.html" target="_blank">Made from scratch - Python as backend</a> <br/>
-Website updated 04-12-2020 14:48 GMT <br/> 
+Website updated 04-12-2020 14:53 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
