--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ I have participated in prestigious AI related conferences such as the <a target=
 <h2>News</h2>
 <p>
 <ul>
-<li>2020/12 - Invited by Universidad Popular del Cesar (Colombia) to give a talk: "Artificial Intelligence: Research and Potential Applications".</li>
+<li>2020/12 - Invited by Universidad Popular del Cesar (Colombia) to give a talk: "AI: Research and Potential Applications".</li>
 <li>2020/12 - Thankful for winning an LXAI grant to attend the prestigious NeurIPS 2020.</li>
 <li>2020/11 - <a href="https://www.latinxinai.org/neurips-2020" target="_blank">Grateful to have been accepted as a mentee in the LXAI Mentoring Program at NeurIPS 2020</a>.</li>
 <li>2020/10 - Glad to be invited to give a talk for Inspiring UNI, as part of a series of professional talks.</li>
