--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ I have participated in prestigious AI related conferences such as the <a target=
 <p>
 <ul>
 <li>2020/12 - Thankful for winning an LXAI grant to attend the prestigious NeurIPS 2020.</li>
-<li>2020/12 - Invited by the Universidad Popular del Cesar (Colombia) to give a lecture about Artificial Intelligence.</li>
+<li>2020/12 - Invited by the Universidad Popular del Cesar (Colombia) to give a talk on Artificial Intelligence.</li>
 <li>2020/11 - <a href="https://www.latinxinai.org/neurips-2020" target="_blank">Grateful to have been accepted as a mentee in the LXAI Mentoring Program at NeurIPS 2020</a>.</li>
 <li>2020/10 - Glad to be invited to give a talk for Inspiring UNI, as part of a series of professional talks.</li>
 <li>2020/10 - <a href="https://www.latinxinai.org/neurips-2020#nips-org" target="_blank">Selected as a program committee member (reviewer) for the LXAI Workshop at the NeurIPS 2020</a>.</li>
@@ -207,7 +207,7 @@ I have participated in prestigious AI related conferences such as the <a target=
 
 </body></html> -->
 <a href="https://dennishnf.com/README.html" target="_blank">Made from scratch - Python as backend</a> <br/>
-Website updated 04-12-2020 15:40 GMT <br/> 
+Website updated 04-12-2020 15:42 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
