--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ I have participated in prestigious AI related conferences such as the <a target=
 <h2>News</h2>
 <p>
 <ul>
-<li>2020/12 - Thankful for winning a 'LatinX in AI' registration grant to attend the prestigious NeurIPS 2020.</li>
+<li>2020/12 - Grateful for winning a 'LatinX in AI' registration grant to attend the prestigious NeurIPS 2020.</li>
 <li>2020/12 - Invited by Universidad Popular del Cesar (Colombia) to give a talk on Artificial Intelligence.</li>
 <li>2020/11 - <a href="https://www.latinxinai.org/neurips-2020" target="_blank">Grateful to have been accepted as a mentee in the LXAI Mentoring Program at NeurIPS 2020</a>.</li>
 <li>2020/10 - Glad to be invited to give a talk for Inspiring UNI, as part of a series of professional talks.</li>
@@ -152,7 +152,7 @@ I have participated in prestigious AI related conferences such as the <a target=
 <li>2020/07 - Invited by my faculty FIEE UNI to give a talk about my experience in research internships abroad.</li>
 <li>2020/06 - <a href="https://sites.google.com/view/hsys2020/papers/accepted-papers" target="_blank">My third paper was selected for poster presentation at HSYS workshop at the ICML 2020</a>.</li>
 <li>2020/06 - <a href="https://mlforglobalhealth.org/posters-and-spotlights/" target="_blank">My two papers were accepted for oral & poster presentation at ML4GH workshop at the ICML 2020</a>.</li>
-<li>2020/06 - Thankful for winning a LXAI grant for my participation in the prestigious ICML 2020.</li>
+<li>2020/06 - Thankful for winning a 'LatinX in AI' registration grant for my participation in the prestigious ICML 2020.</li>
 <li>2020/06 - <a href="https://acl2020.org/" target="_blank">Grateful for winning a grant for the ACL 2020, the best conference on Natural Language Processing</a>.</li>
 <li>2020/06 - <a href="https://sites.google.com/view/inclusion-2020/inclusion-fellowsbio#h.kvia409tw9k8" target="_blank">Selected as an Inclusion Fellow for the Science and Systems (RSS) 2020 conference</a>.</li>
 <li>2020/06 - <a href="https://www.latinxinai.org/icml-2020" target="_blank">Grateful to have been accepted as a mentee in the LXAI Mentoring Program at ICML 2020</a>.</li>
@@ -207,7 +207,7 @@ I have participated in prestigious AI related conferences such as the <a target=
 
 </body></html> -->
 <a href="https://dennishnf.com/README.html" target="_blank">Made from scratch - Python as backend</a> <br/>
-Website updated 04-12-2020 16:37 GMT <br/> 
+Website updated 04-12-2020 16:39 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
