--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ I have participated in prestigious AI related conferences such as the <a target=
 <h2>News</h2>
 <p>
 <ul>
-<li>2020/12 - Our 3 works, which I was advising, were accepted for oral present. at NeurIPS Meetup Peru 2020.</li>
+<li>2020/12 - Our 3 projects, which I advised, were accepted for oral presentation at NeurIPS Meetup Peru 2020.</li>
 <li>2020/12 - Grateful for winning a 'LatinX in AI' registration grant to attend the prestigious NeurIPS 2020.</li>
 <li>2020/12 - Invited by Universidad Popular del Cesar (Colombia) to give a talk on Artificial Intelligence.</li>
 <li>2020/11 - <a href="https://www.latinxinai.org/neurips-2020" target="_blank">Grateful to have been accepted as a mentee in the LXAI Mentoring Program at NeurIPS 2020</a>.</li>
@@ -208,7 +208,7 @@ I have participated in prestigious AI related conferences such as the <a target=
 
 </body></html> -->
 <a href="https://dennishnf.com/README.html" target="_blank">Made from scratch - Python as backend</a> <br/>
-Website updated 10-12-2020 16:05 GMT <br/> 
+Website updated 10-12-2020 16:08 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
