--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ I have participated in prestigious AI related conferences such as the <a target=
 <p>
 <ul>
 <li>2020/12 - Our 3 projects, which I advised, were accepted for oral presentation at NeurIPS Meetup Peru 2020.</li>
-<li>2020/12 - Grateful for winning a 'LatinX in AI' registration grant to attend the prestigious NeurIPS 2020.</li>
+<li>2020/12 - <a href="https://nips.cc/Conferences/2020" target="_blank">Grateful for winning a 'LatinX in AI' registration grant to attend the prestigious NeurIPS 2020</a>.</li>
 <li>2020/12 - Invited by Universidad Popular del Cesar (Colombia) to give a talk on Artificial Intelligence.</li>
 <li>2020/11 - <a href="https://www.latinxinai.org/neurips-2020" target="_blank">Grateful to have been accepted as a mentee in the LXAI Mentoring Program at NeurIPS 2020</a>.</li>
 <li>2020/10 - Glad to be invited to give a talk for Inspiring UNI, as part of a series of professional talks.</li>
@@ -208,7 +208,7 @@ I have participated in prestigious AI related conferences such as the <a target=
 
 </body></html> -->
 <a href="https://dennishnf.com/README.html" target="_blank">Made from scratch - Python as backend</a> <br/>
-Website updated 10-12-2020 16:11 GMT <br/> 
+Website updated 10-12-2020 16:19 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
