--- a/research/research.html
+++ b/research/research.html
@@ -104,7 +104,7 @@
 <li>
 <i>Book chapter:</i> A. Aspilcueta Narvaez, D. Núñez Fernández, S. Gamarra Quispe, D. Lazo Ochoa. `Smart Campus IoT guidance system for visitors based on Bayesian filters'. BTSym 2019. Lima, Peru. (2019) <br/>
 [<a href="none">PDF</a>] 
-[<a href="none">Springer</a>] 
+[<a href="https://doi.org/10.1007/978-3-030-57566-3_46">Springer</a>] 
 </li>
 <br/>
 <li>
@@ -185,7 +185,7 @@
 
 </body></html> -->
 <a href="https://dennishnf.com/README.html" target="_blank">Made from scratch - Python as backend</a> <br/>
-Website updated 16-12-2020 18:21 GMT <br/> 
+Website updated 16-12-2020 18:22 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
