--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ I have participated in prestigious AI related conferences such as the <a target=
         <ul>
         <li>[<a target="_blank" href="https://www.linkedin.com/in/dennishnf">LinkedIn</a>]</li>
         <li>[<a target="_blank" href="https://twitter.com/dennishnf">Twitter</a>]</li>
-        <li>[<a target="_blank" href="https://www.youtube.com/channel/UC-js4NaIhqI7NtVWT2JGHrQ/videos?view_as=subscriber">YouTube</a>]</li>
+        <li>[<a target="_blank" href="https://www.youtube.com/channel/UC-js4NaIhqI7NtVWT2JGHrQ">YouTube</a>]</li>
         </ul>
         </p>
     </div>
@@ -208,7 +208,7 @@ I have participated in prestigious AI related conferences such as the <a target=
 
 </body></html> -->
 <a href="https://dennishnf.com/README.html" target="_blank">Made from scratch - Python as backend</a> <br/>
-Website updated 20-12-2020 19:01 GMT <br/> 
+Website updated 20-12-2020 19:03 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
