--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ I have participated in prestigious AI related conferences such as the <a target=
 <h2>News</h2>
 <p>
 <ul>
-<li>2021/01 - Thankful to be invited to give a talk at the "III Peruvian Deep Learning Symposium (SPDL)".</li>
+<li>2021/01 - Invited as mentor and to give a talk at the "III Peruvian Deep Learning Symposium (SPDL)".</li>
 <li>2020/12 - Our 3 projects, which I advised, were accepted for oral presentation at NeurIPS Meetup Peru 2020.</li>
 <li>2020/12 - <a href="https://nips.cc/Conferences/2020" target="_blank">Grateful for winning a 'LatinX in AI' registration grant to attend the prestigious NeurIPS 2020</a>.</li>
 <li>2020/12 - Invited by Universidad Popular del Cesar (Colombia) to give a talk on Artificial Intelligence.</li>
@@ -209,7 +209,7 @@ I have participated in prestigious AI related conferences such as the <a target=
 
 </body></html> -->
 <a href="https://dennishnf.com/README.html" target="_blank">Made from scratch - Python as backend</a> <br/>
-Website updated 05-02-2021 23:34 GMT <br/> 
+Website updated 05-02-2021 23:35 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
