--- a/index.html
+++ b/index.html
@@ -183,6 +183,7 @@ I have participated in prestigious AI related conferences such as the <a target=
 <li>2016/11 - <a href="http://www.unesco.agh.edu.pl/fileadmin/default/templates/css/j/unesco/system/program_UCTE_2016_v12_2016_12_06x.pdf" target="_blank">Selected as paper presenter and session chair for the UNESCO UCTE 2016 conference, Poland</a>.</li>
 <li>2016/06 - <a href="http://www.unesco.agh.edu.pl/en/" target="_blank">Selected for a fellowship under the UNESCO/Poland Program at the AGH UST, Poland</a>.</li>
 <li>2015/07 - <a href="https://www.uni.edu.pe/" target="_blank">Graduated with the 1st place in my graduating class at Universidad Nacional de Ingeniería - UNI</a>.</li>
+<li>2014/12 - Top 10 Electronic Engineering GPA of all the department in the periods 2014-I and 2014-II. </a>.</li>
 </ul>
 </p>
 
@@ -209,7 +210,7 @@ I have participated in prestigious AI related conferences such as the <a target=
 
 </body></html> -->
 <a href="https://dennishnf.com/README.html" target="_blank">Made from scratch - Python as backend</a> <br/>
-Website updated 11-02-2021 23:59 GMT <br/> 
+Website updated 12-02-2021 00:01 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
