--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ I have participated in prestigious AI related conferences such as the <a target=
 <li>2020/05 - <a href="http://lxmls.it.pt/2020/" target="_blank">Selected to participate in the Lisbon Machine Learning School (LxMLS 2020)</a>.</li>
 <li>2020/03 - Included as a program committee member (reviewer) for the IEEE INTERCON 2020.</li>
 <li>2020/03 - <a href="https://cmmrs.mpi-sws.org/" target="_blank">Selected to participate in the CMMRS 2020: Cornell, Maryland, Max Planck Pre-doctoral School</a>.</li>
-<li>2020/03 - <a href="https://picampus-school.com/programme/school-of-ai/" target="_blank">Glad to obtain a grant for the School of AI programme 2020, hosted by Pi School</a>.</li>
+<li>2020/03 - <a href="https://picampus-school.com/programme/school-of-ai/" target="_blank">Glad to obtain a fellowship for the School of AI programme 2020, hosted by Pi School</a>.</li>
 <li>2020/01 - <a href="http://ailatinsum.mit.edu/" target="_blank">Selected to participate in the AI Latin America SumMIT, event held at the MIT Media Lab</a>.</li>
 <li>2019/11 - <a href="http://vimp.math.unipd.it/people.html" target="_blank">Winner of a scholarship by Fondecyt Peru for a research stay at the University of Padua, Italy</a>.</li>
 <li>2019/11 - Glad to give a talk 'AI in Healtcare' at the faculty of Pharmacy and Biochemistry, at the UNMSM.</li>
@@ -210,7 +210,7 @@ I have participated in prestigious AI related conferences such as the <a target=
 
 </body></html> -->
 <a href="https://dennishnf.com/README.html" target="_blank">Made from scratch - Python as backend</a> <br/>
-Website updated 12-02-2021 00:09 GMT <br/> 
+Website updated 12-02-2021 00:10 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
