--- a/research/research.html
+++ b/research/research.html
@@ -64,6 +64,7 @@
 <br/>
 <h2>Research</h2>
 <br/>
+<h3>Journal Articles</h3>
 <ul>
 <li>
 <i>Pre-printed journal paper:</i> D. Núñez-Fernández, F. Barrientos-Porras, R. H. Gilman, M. Vittet-Mondonedo, P. Sheen, M. Zimic. `A Convolutional Neural Network for gaze preference detection: A potential tool for diagnostics of autism spectrum disorder in children'. arXiv preprint arXiv:2007.14432. (2020) <br/>
@@ -185,7 +186,7 @@
 
 </body></html> -->
 <a href="https://dennishnf.com/README.html" target="_blank">Made from scratch - Python as backend</a> <br/>
-Website updated 12-02-2021 00:20 GMT <br/> 
+Website updated 12-02-2021 00:23 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
