--- a/contact/contact.html
+++ b/contact/contact.html
@@ -64,14 +64,14 @@
 <br/>
 <h2>Contact me</h2>
 <br/>
-<h3>Emails:</h3>
+<h3>Emails</h3>
 <p> 
 &nbsp &nbsp Principal: &nbsp dennishnf@gmail.com
 <br/>
 &nbsp &nbsp Alternative: &nbsp dnunezf@uni.pe
 </p>
 <br/>
-<h3>Addressing:</h3>
+<h3>Addressing</h3>
 <p> 
 &nbsp &nbsp Bioinformatics and Molecular Biology Laboratory
 <br/>
@@ -83,7 +83,7 @@
 </p>
 <br/>
 <!--
-<h3>Find me:</h3>
+<h3>Find me</h3>
 <p> 
 &nbsp &nbsp <a target="_blank" href="https://scholar.google.com/citations?user=QQTBnmMAAAAJ&hl=en">Google Scholar</a>
 <br/>
@@ -122,7 +122,7 @@
 
 </body></html> -->
 <a href="https://dennishnf.com/README.html" target="_blank">Made from scratch - Python as backend</a> <br/>
-Website updated 12-02-2021 00:45 GMT <br/> 
+Website updated 12-02-2021 00:48 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
