--- a/cv/cv.html
+++ b/cv/cv.html
@@ -65,9 +65,11 @@
 <h2>Curriculum Vitae</h2>
 <br/>
 <h3>CV in English</h3>
-<p> 
-&nbsp &nbsp [<a href="CV-DennisNunezFernandez-english.pdf">CV-DennisNunezFernandez-english.pdf</a>]
-</p>
+<ul> 
+<li>
+[<a href="CV-DennisNunezFernandez-english.pdf">CV-DennisNunezFernandez-english.pdf</a>]
+<li>
+</ul>
 <br/>
 <h3>CV in Spanish</h3>
 <p> 
@@ -98,7 +100,7 @@
 
 </body></html> -->
 <a href="https://dennishnf.com/README.html" target="_blank">Made from scratch - Python as backend</a> <br/>
-Website updated 12-02-2021 01:17 GMT <br/> 
+Website updated 12-02-2021 01:22 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
