--- a/cv/cv.html
+++ b/cv/cv.html
@@ -70,11 +70,10 @@
 [<a href="CV-DennisNunezFernandez-english.pdf">CV-DennisNunezFernandez-english.pdf</a>]
 </li>
 </ul>
-<br/>
 <h3>CV in Spanish</h3>
 <ul> 
 <li>
-&nbsp &nbsp [<a href="CV-DennisNunezFernandez-spanish.pdf">CV-DennisNunezFernandez-spanish.pdf</a>]
+[<a href="CV-DennisNunezFernandez-spanish.pdf">CV-DennisNunezFernandez-spanish.pdf</a>]
 </li>
 </ul>
 <br/>
@@ -102,7 +101,7 @@
 
 </body></html> -->
 <a href="https://dennishnf.com/README.html" target="_blank">Made from scratch - Python as backend</a> <br/>
-Website updated 12-02-2021 01:24 GMT <br/> 
+Website updated 12-02-2021 01:25 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
