--- a/cv/cv.html
+++ b/cv/cv.html
@@ -63,18 +63,14 @@
 <div class="post_body">
 <br/>
 <h2>Curriculum Vitae</h2>
+<h2>CV in English</h2>
 <br/>
-<h3>CV in English</h3>
 <ul> 
-<li>
-[<a href="CV-DennisNunezFernandez-english.pdf">CV-DennisNunezFernandez-english.pdf</a>]
-</li>
+<li>[<a href="CV-DennisNunezFernandez-english.pdf">CV-DennisNunezFernandez-english.pdf</a>]</li>
 </ul>
 <h3>CV in Spanish</h3>
 <ul> 
-<li>
-[<a href="CV-DennisNunezFernandez-spanish.pdf">CV-DennisNunezFernandez-spanish.pdf</a>]
-</li>
+<li>[<a href="CV-DennisNunezFernandez-spanish.pdf">CV-DennisNunezFernandez-spanish.pdf</a>]</li>
 </ul>
 <br/>
 
@@ -101,7 +97,7 @@
 
 </body></html> -->
 <a href="https://dennishnf.com/README.html" target="_blank">Made from scratch - Python as backend</a> <br/>
-Website updated 12-02-2021 01:25 GMT <br/> 
+Website updated 12-02-2021 01:30 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
