--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ I have participated in prestigious AI related conferences such as the NeurIPS (<
 <li>2020/05 - <a href="https://www.latinxinai.org/icml-2020#workshop-org" target="_blank">Selected as program committee member (reviewer) for the LXAI Workshop at the ICML 2020</a>.</li>
 <li>2020/05 - <a href="http://lxmls.it.pt/2020/" target="_blank">Selected to participate in the Lisbon Machine Learning School (LxMLS 2020)</a>.</li>
 <li>2020/03 - Included as a program committee member (reviewer) for the IEEE INTERCON 2020.</li>
-<li>2020/03 - <a href="https://cmmrs.mpi-sws.org/" target="_blank">Selected to participate in the CMMRS 2020: Cornell, Maryland, Max Planck Pre-doctoral School</a>.</li>
+<li>2020/03 - <a href="https://cmmrs.mpi-sws.org/" target="_blank">Selected to participate in the CMMRS 2020: the Cornell, Maryland, Max Planck Pre-doctoral School</a>.</li>
 <li>2020/03 - <a href="https://picampus-school.com/programme/school-of-ai/" target="_blank">Glad to obtain a fellowship for the School of AI programme 2020, hosted by Pi School</a>.</li>
 <li>2020/01 - <a href="http://ailatinsum.mit.edu/" target="_blank">Selected to participate in the AI Latin America SumMIT, event held at the MIT Media Lab</a>.</li>
 <li>2019/11 - <a href="http://vimp.math.unipd.it/people.html" target="_blank">Winner of a scholarship by Fondecyt Peru for a research stay at the University of Padua, Italy</a>.</li>
@@ -213,7 +213,7 @@ I have participated in prestigious AI related conferences such as the NeurIPS (<
 
 </body></html> -->
 <a href="https://dennishnf.com/README.html" target="_blank">Made from scratch - Python as backend</a> <br/>
-Website updated 04-03-2021 05:37 GMT <br/> 
+Website updated 04-03-2021 05:40 GMT <br/> 
 </div> 
 <div class="clearer">&nbsp;</div> 
 </div> 
